--- a/site/package.json
+++ b/site/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Terry Parrish",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.4.2",
     "express3-handlebars": "^0.5.0"
