--- a/site/package.json
+++ b/site/package.json
@@ -13,11 +13,20 @@
   "author": "Terry Parrish",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.4.2",
-    "express3-handlebars": "^0.5.0"
+    "body-parser": "~1.3.0",
+    "chai": "~1.9.1",
+    "cookie-parser": "^1.4.1",
+    "express": "~4.4.2",
+    "express3-handlebars": "~0.5.0",
+    "formidable": "^1.0.14",
+    "jquery-file-upload-middleware": "^0.1.2"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
-    "mocha": "^2.3.4"
+    "grunt": "^0.4.5",
+    "grunt-cafe-mocha": "^0.1.12",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-exec": "^0.4.5",
+    "mocha": "~1.20.1",
+    "zombie": "~2.0.0-alpha31"
   }
 }
