--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "chai": "~1.9.1",
     "cookie-parser": "^1.4.1",
     "express": "~4.4.2",
+    "express-session": "^1.13.0",
     "express3-handlebars": "~0.5.0",
     "formidable": "^1.0.14",
     "jquery-file-upload-middleware": "^0.1.2"
